Fixed stretched image"

--- a/src/pages/styles/about.css
+++ b/src/pages/styles/about.css
@@ -5,6 +5,7 @@
 
 .about img {
     max-width: 100%;
+    object-fit: contain;
 }
 
 .about .schild {
@@ -25,6 +26,5 @@
     }
     .schild {
         margin: 0;
-        max-height: initial;
     }
 }
